# kuberwave

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: error.rs  kubectl.rs  main.rs  resourcefile.rs  util.rs
src/cluster/: mod.rs  templates.rs  types.rs
src/commands/: cluster_generate.rs  mod.rs  project_deploy.rs  project_generate.rs
src/project/: templates.rs  types.rs
src/secrets/: mod.rs
templates/cluster/: clusterrolebinding.yml  namespace.yml  resourcequota.yml  role-all.yml  role-view.yml  rolebinding.yml  serviceaccount.yml
templates/project/: certificate.yml  configmap.yml  ingress.yml  network-policy.yml  secrets-opaque.yml  secrets-regcred.yml
